启动脚本添加内存设置和垃圾回收日志